<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data></data>

    <TableLayout
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        tools:context="unicauca.movil.restaurantesmaterial.LoginActivity">

        <FrameLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_img"
                android:src="@drawable/popayan"
                android:scaleType="centerCrop" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/mask" />

            <TextView
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#fff"
                android:layout_gravity="bottom"
                android:padding="@dimen/small" />

        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="0dp"
            android:padding="@dimen/small"
            android:layout_weight="1"
            android:gravity="center">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usr">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/medium"
                    android:inputType="text"
                    android:hint="@string/login_usr" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/login_pass" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <TableRow>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/login_reg" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/login_in" />
        </TableRow>

    </TableLayout>
</layout>

